[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -282,7 +282,7 @@ offlineApps.neverAccessKey=c
 offlineApps.notNow=Ocultar
 offlineApps.notNowAccessKey=O
 
-offlineApps.usage=Este site (%S) está armazenando mais do que %S MB de dados no seu computador para uso offline.
+offlineApps.usage=Este site (%S) está armazenando mais do que %SMB de dados no seu computador para uso offline.
 offlineApps.manageUsage=Exibir configurações
 offlineApps.manageUsageAccessKey=i
 
@@ -447,7 +447,7 @@ webapps.uninstall.accesskey = D
 webapps.doNotUninstall = Não desinstalar
 webapps.doNotUninstall.accesskey = N
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
-webapps.requestUninstall = Deseja desinstalar “%S”?
+webapps.requestUninstall = Deseja desinstalar "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=O %S está em tela inteira.
