--- a/pt-BR/browser/chrome/browser/devtools/responsiveUI.properties
+++ b/pt-BR/browser/chrome/browser/devtools/responsiveUI.properties
@@ -51,7 +51,7 @@ responsiveUI.close=Sair do modo de design adaptável
 
 # LOCALIZATION NOTE  (responsiveUI.customNamePromptMsg): prompt message when asking
 # the user to specify a name for a new custom preset.
-responsiveUI.customNamePromptMsg=Nome para a dimensão %S×%S:
+responsiveUI.customNamePromptMsg=Nome para a dimensão %Sx%S:
 
 # LOCALIZATION NOTE (responsiveUI.resizer): tooltip showed when
 # overring the resizers.
