--- a/pt-BR/browser/chrome/browser/devtools/webide.properties
+++ b/pt-BR/browser/chrome/browser/devtools/webide.properties
@@ -20,6 +20,7 @@ importHostedApp_title=Abrir aplicativo hospedado
 importHostedApp_header=Forneça a URL do manifesto
 
 notification_showTroubleShooting_label=resolver o problema
+notification_showTroubleShooting_accesskey=T
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
