--- a/pt-BR/browser/chrome/browser/downloads/downloads.properties
+++ b/pt-BR/browser/chrome/browser/downloads/downloads.properties
@@ -63,6 +63,7 @@ unblockTypePotentiallyUnwanted=Este arquivo, disfarçado como um download útil,
 unblockTypeUncommon=Este arquivo foi baixado de um site desconhecido e potencialmente perigoso e pode não ser seguro abri-lo.
 unblockTip=Você pode procurar por uma fonte alternativa de download ou tentar baixar o arquivo novamente mais tarde.
 unblockButtonContinue=Desbloquear mesmo assim
+unblockButtonCancel=Manter bloqueado
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
@@ -93,7 +94,7 @@ shortTimeLeftDays=%1$Sd
 statusSeparator=%1$S — %2$S
 statusSeparatorBeforeNumber=%1$S —  %2$S
 
-fileExecutableSecurityWarning=“%S” é um aplicativo.\nTome cuidado, ele pode conter vírus ou instruções que podem danificar o seu computador.\nTem certeza que deseja executar “%S”?
+fileExecutableSecurityWarning="%S" é um aplicativo. Ele pode conter vírus ou instruções que podem danificar o seu computador. Tome cuidado ao abrir esse arquivo. Tem certeza que deseja executar "%S"?
 fileExecutableSecurityWarningTitle=Executar um aplicativo?
 fileExecutableSecurityWarningDontAsk=Não perguntar de novo
 
@@ -102,4 +103,4 @@ fileExecutableSecurityWarningDontAsk=Não perguntar de novo
 # there are more downloads than can fit in the list in the panel. Use a
 # semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/Localization_and_Plurals
-otherDownloads2=+ outro download; + outros %1$S downloads
+otherDownloads2=+ %1$S outro download; + %1$S outros downloads
