--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -11,6 +11,7 @@ clientShortname2=Firefox Hello
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
 first_time_experience_title={{clientShortname}} — Entre na conversa
+first_time_experience_button_label=Começar
 
 share_link_header_text=Compartilhe este link para convidar alguém para conversar:
 invite_header_text=Convide alguém para se juntar a você.
@@ -45,6 +46,7 @@ display_name_available_status=Disponível
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+unable_retrieve_url=Desculpe, não foi possível carregar uma URL de chamada.
 session_expired_error_description=A sessão perdeu a validade. Todas as URLs que você criou e compartilhou anteriormente não funcionarão mais.
 could_not_authenticate=Não foi possível autenticar
 password_changed_question=Você modificou sua senha?
@@ -65,6 +67,7 @@ share_email_subject4={{clientShortname}} — Entrar na conversa
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_email_body4=Olá!\r\n\r\nConverse comigo com vídeo usando o {{clientShortname}}:\r\n\r\nVocê não precisa baixar ou instalar nada. Basta copiar e colar esse link em seu navegador:\r\n\r\n{{callUrl}}\r\n\r\nSe quiser, você também pode saber mais sobre o {{clientShortname}} em {{learnMoreUrl}}\r\n\r\nFalo com você em breve!
 share_button=Email
+share_button2=Enviar link por email
 copy_url_button=Copiar
 copy_url_button2=Copiar link
 copied_url_button=Copiado!
@@ -126,6 +129,7 @@ sync_contacts_button=Sincronizar contatos
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Desculpe, a importação de contatos falhou
 import_failed_description_some=Alguns contatos não podem ser importados
+import_failed_support_button=Ajuda
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -283,6 +287,7 @@ feedback_rejoin_button=Reconectar
 ## an abusive user.
 feedback_report_user_button=Reportar usuário
 
+help_label=Ajuda
 tour_label=Tour
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
