--- a/pt-BR/browser/chrome/browser/shellservice.properties
+++ b/pt-BR/browser/chrome/browser/shellservice.properties
@@ -12,6 +12,8 @@ setDefaultBrowserConfirm.label     = Definir o %S como meu navegador padrão
 setDefaultBrowserConfirm.accesskey = D
 setDefaultBrowserOptions.label     = Opções
 setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Agora não
+setDefaultBrowserNotNow.accesskey  = A
 setDefaultBrowserNever.label       = Não perguntar de novo
 setDefaultBrowserNever.accesskey   = N
 
