--- a/pt-BR/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/pt-BR/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -29,7 +29,7 @@ quitCancelDownloadsAlertMsgMultiple=Para sair é necessário cancelar os %S down
 quitCancelDownloadsAlertMsgMac=Para sair é necessário cancelar o download em andamento. Confirma?
 quitCancelDownloadsAlertMsgMacMultiple=Para sair é necessário cancelar os %S downloads em andamento. Confirma?
 offlineCancelDownloadsAlertTitle=Cancelar downloads
-offlineCancelDownloadsAlertMsg=Para entrar no modo offline é necessário cancelar o download em andamento.\nConfirma?
+offlineCancelDownloadsAlertMsg=Para entrar no modo offline é necessário cancelar o download em andamento. Confirma?
 offlineCancelDownloadsAlertMsgMultiple=Para entrar no modo offline é necessário cancelar os %S downloads em andamento. Confirma?
 leavePrivateBrowsingCancelDownloadsAlertTitle=Cancelar todos os downloads?
 leavePrivateBrowsingWindowsCancelDownloadsAlertMsg=Se você fechar agora todas as janelas da navegação privativa, um download será cancelado. Tem certeza que deseja sair do modo de navegação privativa?
@@ -79,6 +79,7 @@ transferDiffUnits2=%1$S %2$S de %3$S %4$S
 # LOCALIZATION NOTE (transferNoTotal2):
 # %1$S progress number; %2$S unit
 # example: 111 KB
+transferNoTotal2=%1$S %2$S
 
 # LOCALIZATION NOTE (timePair2): %1$S time number; %2$S time unit
 # example: 1 minute; 11 hours
