--- a/pt-BR/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/pt-BR/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -161,6 +161,8 @@ addon.purchase.label=Comprar por %S…
 addon.purchase.tooltip=Visitar a galeria para comprar este complemento
 #LOCALIZATION NOTE (cmd.purchaseAddon.label) displayed on a button in the detail
 # view, %S is the price of the add-on including currency symbol
+cmd.purchaseAddon.label=Comprar por %S…
+cmd.purchaseAddon.accesskey=C
 
 #LOCALIZATION NOTE (eulaHeader) %S is name of the add-on asking the user to agree to the EULA
 eulaHeader=O %S necessita que você aceite, para prosseguir com a instalação, o Acordo de Licença para o Usuário Final:
