--- a/pt-BR/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/pt-BR/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -100,7 +100,10 @@ quit-button.tooltiptext.mac = Sair do %1$S (%2$S)
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
 loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Iniciar uma conversa
 
+social-share-button.label = Compartilhar esta página
+social-share-button.tooltiptext = Compartilhar esta página
 
 panic-button.label = Esquecer
 panic-button.tooltiptext = Esquecer uma parte de seus dados pessoais
