--- a/pt-BR/browser/chrome/browser/devtools/timeline.properties
+++ b/pt-BR/browser/chrome/browser/devtools/timeline.properties
@@ -36,7 +36,9 @@ timeline.records=RECORDS
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Estilos
+timeline.label.reflow=Reflows
 timeline.label.paint=Pintar
+timeline.label.javascript=Javascript
 timeline.label.domevent=Evento DOM
 timeline.label.consoleTime=Console
 
