--- a/pt-BR/browser/chrome/browser/pageInfo.properties
+++ b/pt-BR/browser/chrome/browser/pageInfo.properties
@@ -36,7 +36,7 @@ mediaDimensionsScaled=%S×%S pixels (redimensionada para %S×%S pixels)
 generalQuirksMode=Modo de compatibilidade (“Quirks mode”)
 generalStrictMode=Modo de conformidade com os padrões (“Standards compliance mode”)
 generalSize=%S KB (%S bytes)
-generalMetaTag=Tag meta
+generalMetaTag=Tag meta (1 tag)
 generalMetaTags=Tags meta (%S)
 
 feedRss=Formato RSS
