--- a/pt-BR/browser/chrome/browser/preferences/preferences.properties
+++ b/pt-BR/browser/chrome/browser/preferences/preferences.properties
@@ -66,7 +66,7 @@ portableDocumentFormat=PDF
 # LOCALIZATION NOTE (usePluginIn):
 # %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
 # %2$S = brandShortName from brand.properties (for example "Minefield")
-usePluginIn=Abrir com o %1$S (no %2$S)
+usePluginIn=Abrir com o %S (no %S)
 
 # LOCALIZATION NOTE (previewInApp, addLiveBookmarksInApp): %S = brandShortName
 previewInApp=Visualizar no %S
