--- a/pt-BR/dom/chrome/dom/dom.properties
+++ b/pt-BR/dom/chrome/dom/dom.properties
@@ -29,7 +29,7 @@ FormValidationRadioMissing=Por favor, selecione uma destas opções
 FormValidationFileMissing=Por favor, selecione um arquivo
 FormValidationSelectMissing=Por favor, selecione um item da lista
 FormValidationInvalidEmail=Por favor, forneça um endereço de email
-FormValidationInvalidURL=Por favor, forneça um endereço da internet
+FormValidationInvalidURL=Por favor, forneça um endereço da internet.
 FormValidationPatternMismatch=Por favor, satisfaça o formato requisitado
 # LOCALIZATION NOTE (FormValidationPatternMismatchWithTitle): %S is the (possibly truncated) title attribute value.
 FormValidationPatternMismatchWithTitle=Por favor, satisfaça o formato requisitado: %S
