--- a/pt-BR/netwerk/necko.properties
+++ b/pt-BR/netwerk/necko.properties
@@ -38,3 +38,4 @@ PhishingAuthAccept=Eu entendi e serei muito cauteloso
 SuperfluousAuth=Você irá entrar no site %1$S com o nome de usuário “%2$S”. Entretanto o site não exige autenticação.\n\nEsta pode ser uma tentativa de enganá-lo. O site que você deseja visitar é mesmo %1$S?
 AutomaticAuth=Você irá entrar no site %1$S com o nome de usuário “%2$S”.
 
+TrackingUriBlocked=O recurso em "%1$S" foi bloqueado porque a proteção contra rastreamento está ativa.
