--- a/pt-BR/security/manager/chrome/pippki/pippki.properties
+++ b/pt-BR/security/manager/chrome/pippki/pippki.properties
@@ -56,7 +56,7 @@ certNotVerified_CertExpired=Não foi possível comprovar a homologação deste c
 certNotVerified_CertNotTrusted=Não foi possível comprovar a homologação deste certificado porque ele não é considerado confiável.
 certNotVerified_IssuerNotTrusted=Não foi possível comprovar a homologação deste certificado porque o expedidor não é considerado confiável.
 certNotVerified_IssuerUnknown=Não foi possível comprovar a homologação deste certificado porque o expedidor é desconhecido.
-certNotVerified_CAInvalid=Não foi possível comprovar a homologação deste certificado porque o certificado da autoridade certificadora é inválido.
+certNotVerified_CAInvalid=Não foi possível verificar esse certificado porque o certificado da autoridade certificadora é inválido.
 certNotVerified_AlgorithmDisabled=Não foi possível comprovar a homologação deste certificado porque foi assinado usando um algoritmo de assinatura que foi desativado porque não é seguro.
 certNotVerified_Unknown=Devido a causas não previstas, não foi possível comprovar a homologação do certificado.
 
@@ -76,8 +76,11 @@ pageInfo_Privacy_None3=A página exibida não foi criptografada.
 # LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Conexão criptografada (%1$S, chaves de %2$S bits, %3$S)
 pageInfo_Privacy_Encrypted1=A página exibida foi criptografada antes ser transmitida pela internet.
+pageInfo_Privacy_Encrypted2=A criptografia torna difícil que pessoas não autorizadas vejam as informações transmitidas entre dois computadores. Portanto é improvável que alguém tenha interceptado esta página durante a transmissão pela rede.
 pageInfo_MixedContent=Conexão criptografada parcialmente
+pageInfo_Privacy_Broken1=Partes da página exibida não foram criptografadas, ou a criptografia não foi boa o suficiente, antes de serem transmitidas pela internet.
 
 #Cert Viewer
 certDetails=Visualizador de certificados:\u0020
@@ -148,10 +151,13 @@ addExceptionDomainMismatchLong2=O certificado pertence a um site diferente, o qu
 addExceptionExpiredShort=Informação desatualizada
 addExceptionExpiredLong2=O certificado não é válido no momento. Ele pode ter sido roubado ou perdido e poderia ser usado por uma pessoa para representar este site.
 addExceptionUnverifiedOrBadSignatureShort=Identidade desconhecida
+addExceptionUnverifiedOrBadSignatureLong2=O certificado não é considerado confiável porque não foi verificado por uma autoridade reconhecida usando uma assinatura segura.
 addExceptionValidShort=Certificado válido
 addExceptionValidLong=Este site fornece identificação válida e homologada. Não é necessário adicionar uma exceção.
 addExceptionCheckingShort=Verificando informações
+addExceptionCheckingLong2=Tentando identificar o site…
 addExceptionNoCertShort=Nenhuma informação disponível
+addExceptionNoCertLong2=Não é possível obter status de identificação para este site.
 addExceptionConnectionFailed=Falha na conexão
 
 #Certificate Exists in database
