--- a/pt-BR/services/sync/sync.properties
+++ b/pt-BR/services/sync/sync.properties
@@ -17,6 +17,8 @@ remote.notification.label = As abas recentes do desktop estarão disponíveis as
 
 error.login.title = Erro ao conectar
 error.login.description = O Sync encontrou um erro ao conectar: %1$S. Por favor, tente de novo.
+error.login.prefs.label = Preferências…
+error.login.prefs.accesskey = P
 # should decide if we're going to show this
 error.logout.title = Erro ao desconectar
 error.logout.description = O Sync encontrou um erro ao conectar. Provavelmente está tudo OK e não há razão para se preocupar.
@@ -34,9 +36,13 @@ warning.sync.quota.label = Aproximando-se da cota no servidor
 warning.sync.quota.description = Você está se aproximando da cota no servidor. Por favor, reveja quais dados sincronizar.
 error.sync.quota.label = Cota no servidor excedida
 error.sync.quota.description = O Sync falhou porque a cota no servidor foi excedida. Por favor, reveja quais dados sincronizar.
+error.sync.viewQuotaButton.label = Exibir cota
+error.sync.viewQuotaButton.accesskey = E
 warning.sync.eol.label = Serviço sendo desativado
 # %1: the app name (Firefox)
 warning.sync.eol.description = O seu serviço Firefox Sync será desativado em breve. Atualize o %1$S para permanecer sincronizado.
 error.sync.eol.label = Serviço indisponível
 # %1: the app name (Firefox)
 error.sync.eol.description = O seu serviço Firefox Sync não está mais disponível. Você precisa atualizar o %1$S para permanecer sincronizado.
+sync.eol.learnMore.label = Saiba mais
+sync.eol.learnMore.accesskey = S
