[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/devtools/scratchpad.properties
+++ b/pt-BR/browser/chrome/browser/devtools/scratchpad.properties
@@ -67,7 +67,7 @@ confirmRevert.title=Reverter alterações
 # LOCALIZATION NOTE  (scratchpadIntro): This is a multi-line comment explaining
 # how to use the Scratchpad. Note that this should be a valid JavaScript
 # comment inside /* and */.
-scratchpadIntro1=/*\n * Este é o JavaScript Scratchpad.\n *\n * Forneça algum JavaScript, clique com o botão direito ou selecione do menu Execução:\n * 1. Executar o texto selecionado (%1$S),\n * 2. Inspecionar: abra o resultado em uma janela “Inspecionar objeto” (%2$S)\n * 3. Visualizar: insira o resultado em um comentário depois da seleção. (%3$S)\n */\n\n
+scratchpadIntro1=/*\n * Este é o JavaScript Scratchpad.\n *\n * Escreva JavaScript, e depois clique com o botão direito ou selecione no menu Execução:\n * 1. Executar: para avaliar o texto selecionado (%1$S),\n * 2. Inspecionar: para abrir o resultado em uma janela de inspeção (%2$S)\n * 3. Visualizar: para inserir o resultado em um comentário depois da seleção. (%3$S)\n */\n\n
 
 # LOCALIZATION NOTE  (scratchpad.noargs): This error message is shown when
 # Scratchpad instance is created without any arguments. Scratchpad window
