--- a/pt-BR/browser/chrome/browser/devtools/timeline.properties
+++ b/pt-BR/browser/chrome/browser/devtools/timeline.properties
@@ -64,3 +64,4 @@ timeline.markerDetail.DOMEventType=Tipo de evento:
 timeline.markerDetail.DOMEventPhase=Fase:
 timeline.markerDetail.DOMEventTargetPhase=Destino
 timeline.markerDetail.DOMEventCapturingPhase=Capturar
+timeline.markerDetail.DOMEventBubblingPhase=Bubbling
