--- a/pt-BR/browser/chrome/browser/devtools/webide.properties
+++ b/pt-BR/browser/chrome/browser/devtools/webide.properties
@@ -54,6 +54,7 @@ addons_simulator_label=Firefox OS %1$S Simulator (%2$S)
 addons_install_button=instalar
 addons_uninstall_button=desinstalar
 addons_adb_label=Extensão ADB Helper
+addons_adapters_label=Add-on Tools Adapters
 addons_adb_warning=Dispositivos USB não serão detectados sem esta extensão
 addons_status_unknown=?
 addons_status_installed=Instalado
