--- a/pt-BR/dom/chrome/security/security.properties
+++ b/pt-BR/dom/chrome/security/security.properties
@@ -18,3 +18,4 @@ InsecurePasswordsPresentOnIframe=Campos de senha presentes em um iframe inseguro
 LoadingMixedActiveContent=Carregando conteúdo ativo mesclado (inseguro) em uma página segura “%1$S”
 LoadingMixedDisplayContent=Carregando conteúdo de exibição mesclado (inseguro) em uma página segura “%1$S”
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=Um iframe que tem allow-scripts e allow-same-origin no seu atributo sandbox pode remover sua sandbox.
