--- a/sq/browser/installer/custom.properties
+++ b/sq/browser/installer/custom.properties
@@ -30,7 +30,7 @@ STATUS_UNINSTALL_MAIN=$BrandShortName-i po çinstalohet…
 STATUS_CLEANUP=Pakëz Pastrim…
 # _DESC strings support approximately 65 characters per line.
 # One line
-OPTIONS_SUMMARY=Zgjidhni lloj rregullimi të parapëlqyer, mandej klikoni mbi Pasues.
+OPTIONS_SUMMARY=Zgjidhni lloj rregullimi të parapëlqyer, mandej klikoni mbi Pasuesin.
 # One line
 OPTION_STANDARD_DESC=$BrandShortName-i do të instalohet me shumicën e mundësive të zakonshme.
 OPTION_STANDARD_RADIO=&Standard
