--- a/sq/toolkit/chrome/mozapps/extensions/update.properties
+++ b/sq/toolkit/chrome/mozapps/extensions/update.properties
@@ -8,7 +8,7 @@ mismatchDontCheck=Mos Kontrollo
 mismatchDontCheckAccesskey=M
 installButtonText=Instaloje Tani
 installButtonTextAccesskey=I
-nextButtonText=Pasues >
+nextButtonText=Pasuesi >
 nextButtonTextAccesskey=P
 cancelButtonText=Anuloje
 cancelButtonTextAccesskey=A
