--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -526,7 +526,7 @@ getUserMedia.selectWindow.accesskey=D
 getUserMedia.selectScreen.label=Ekran për ndarje me të tjerët:
 getUserMedia.selectScreen.accesskey=E
 getUserMedia.selectApplication.label=Aplikacion për ndarje me të tjerët:
-getUserMedia.selectApplication.accesskey=AZ
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Pa Video
 getUserMedia.noApplication.label = Pa Aplikacion
 getUserMedia.noScreen.label = Pa Ekran
@@ -593,10 +593,10 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamerë dhe mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamerë, mikrofon dhe aplikacion)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamerë, mikrofon dhe ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamerë, mikrofon dhe dritare)
-getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe zbatim)
+getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe aplikacion)
 getUserMedia.sharingMenuCameraScreen = %S (kamerë dhe ekran)
 getUserMedia.sharingMenuCameraWindow = %S (kamerë dhe dritare)
-getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dhe zbatim)
+getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dhe aplikacion)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon dhe ekran)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon dhe dritare)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
