--- a/uk/mobile/android/chrome/webapp.properties
+++ b/uk/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 оновлення невдале;#1 оновлення 
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Не вдалося отримати оновлення для %1$S;Не вдалося отримати оновлення для %1$S;Не вдалося отримати оновлення для %1$S
 
-webappsDisabledInGuest=Встановлення програм недоступне у гостьових сеансах
+webappsDisabled=Installing apps is disabled
