[browser] Wrapping-up 37, part 1

--- a/fr/browser/chrome/browser/devtools/webide.properties
+++ b/fr/browser/chrome/browser/devtools/webide.properties
@@ -65,7 +65,7 @@ addons_status_installing=installation
 
 runtimedetails_checkno=non
 runtimedetails_checkyes=oui
-runtimedetails_checkunkown=inconnu
+runtimedetails_checkunknown=inconnu (nécessite ADB Helper 0.4.0 ou plus récent)
 runtimedetails_notUSBDevice=N'est pas un périphérique USB
 
 # Validation status
