--- a/fr/browser/chrome/browser/preferences/preferences.properties
+++ b/fr/browser/chrome/browser/preferences/preferences.properties
@@ -90,6 +90,14 @@ cannot=Bloquer
 noCookieSelected=<aucun cookie sélectionné>
 cookiesAll=Les cookies suivants sont stockés sur votre ordinateur :
 cookiesFiltered=Les cookies suivants correspondent à votre recherche :
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=Supprimer le cookie sélectionné;Supprimer les cookies sélectionnés
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -135,9 +143,3 @@ syncUnlinkConfirm.label=Retirer
 featureEnableRequiresRestart=%S doit redémarrer pour activer cette fonctionnalité.
 featureDisableRequiresRestart=%S doit redémarrer pour désactiver cette fonctionnalité.
 shouldRestartTitle=Redémarrer %S
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=Lien de vérification envoyé
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=Un lien de vérification a été envoyé à %S
-firefoxAccountVerificationSentDescription=Veuillez consulter vos messages et cliquer sur le lien pour lancer la synchronisation.
