--- a/fr/browser/chrome/browser/devtools/projecteditor.properties
+++ b/fr/browser/chrome/browser/devtools/projecteditor.properties
@@ -46,6 +46,11 @@ projecteditor.deleteFilePromptMessage=Voulez-vous vraiment supprimer ce fichierÂ
 # the directory
 projecteditor.newLabel=Nouveauâ€¦
 
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+projecteditor.renameLabel=Renommer
+
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=Enregistrer
