--- a/fr/browser/chrome/browser/devtools/timeline.properties
+++ b/fr/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,11 @@ timeline.records=ENREGISTREMENTS
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=Styles
-timeline.label.reflow=Reflow
+# We want to use the same wording as Google Chrome
+timeline.label.styles2=Recalcul des styles
+timeline.label.reflow2=Layout
 timeline.label.paint=Paint
-timeline.label.javascript=Javascript
+timeline.label.javascript2=Appel de fonction
 timeline.label.domevent=Évènement DOM
 timeline.label.consoleTime=Console
 
@@ -65,3 +66,7 @@ timeline.markerDetail.DOMEventPhase=Phase :
 timeline.markerDetail.DOMEventTargetPhase=ciblage
 timeline.markerDetail.DOMEventCapturingPhase=capture
 timeline.markerDetail.DOMEventBubblingPhase=bouillonnement
+timeline.markerDetail.stack=Pile :
+timeline.markerDetail.startStack=Pile initiale :
+timeline.markerDetail.endStack=Pile finale :
+timeline.markerDetail.unknownFrame=<position inconnue>
