--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -270,7 +270,7 @@ feedback_category_audio_quality=Qualité audio
 feedback_category_video_quality=Qualité vidéo
 feedback_category_was_disconnected=J'ai été déconnecté(e)
 feedback_category_confusing=Perturbant
-feedback_category_other=Autre :
+feedback_category_other2=Autre
 feedback_custom_category_text_placeholder=Quels ont été les problèmes ?
 feedback_submit_button=Envoyer
 feedback_back_button=Retour
