--- a/fr/dom/chrome/security/security.properties
+++ b/fr/dom/chrome/security/security.properties
@@ -18,8 +18,9 @@ SHA1Sig=Ce site utilise un certificat SHA-1 ; il est recommandé d'utiliser des
 InsecurePasswordsPresentOnPage=Champs mot de passe présents sur une page non sécurisée (http://). Cela représente un risque de sécurité permettant le vol d'identifiants de connexion.
 InsecureFormActionPasswordsPresent=Champs mot de passe présents dans un formulaire possédant une action de formulaire non sécurisée (http://). Cela représente un risque de sécurité permettant le vol d'identifiants de connexion.
 InsecurePasswordsPresentOnIframe=Champs mot de passe présents dans une iframe non sécurisée (http://). Cela représente un risque de sécurité permettant le vol d'identifiants de connexion.
-LoadingMixedActiveContent=Chargement de contenu mixte actif (non sécurisé) sur une page sécurisée « %1$S »
-LoadingMixedDisplayContent=Chargement de contenu mixte non actif (non sécurisé) sur une page sécurisée « %1$S »
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedActiveContent2=Chargement du contenu mixte actif « %1$S » (non sécurisé) sur une page sécurisée
+LoadingMixedDisplayContent2=Chargement du contenu mixte non actif « %1$S » (non sécurisé) sur une page sécurisée
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Un iframe possédant à la fois allow-scripts et allow-same-origin pour son attribut sandbox peut se retirer du mode bac à sable (sandboxing).
 
