Ton - Diverse consistenties

--- a/nl/security/manager/chrome/pippki/pippki.properties
+++ b/nl/security/manager/chrome/pippki/pippki.properties
@@ -98,7 +98,7 @@ pw_erased_ok=Waarschuwing! U hebt uw hoofdwachtwoord verwijderd.
 pw_not_wanted=Waarschuwing! U hebt besloten geen hoofdwachtwoord te gebruiken.
 pw_empty_warning=Uw opgeslagen web- en e-mailwachtwoorden, formuliergegevens en privésleutels zullen niet worden beschermd.
 pw_change2empty_in_fips_mode=U bevindt zich op dit moment in FIPS-modus. FIPS vereist een ingesteld hoofdwachtwoord.
-login_failed=Inloggen mislukt
+login_failed=Aanmelden mislukt
 loadPK11TokenDialog=Kies een PKCS #11-apparaat om te laden
 devinfo_modname=Module
 devinfo_modpath=Pad
@@ -112,9 +112,9 @@ devinfo_desc=Beschrijving
 devinfo_stat_disabled=Uitgeschakeld
 devinfo_stat_notpresent=Niet aanwezig
 devinfo_stat_uninitialized=Niet geïnitialiseerd
-devinfo_stat_notloggedin=Niet ingelogd
-devinfo_stat_loggedin=Ingelogd
-devinfo_stat_ready=Klaar
+devinfo_stat_notloggedin=Niet aangemeld
+devinfo_stat_loggedin=Aangemeld
+devinfo_stat_ready=Gereed
 enable_fips=FIPS inschakelen
 disable_fips=FIPS uitschakelen
 fips_nonempty_password_required=FIPS-modus vereist dat u een hoofdwachtwoord hebt ingesteld voor elk beveiligingsapparaat. Stel het wachtwoord in voordat u FIPS-modus probeert in te schakelen.
