--- a/nl/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/nl/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -36,7 +36,7 @@ profileCreationFailedTitle=Aanmaken van het profiel is mislukt
 profileExists=Een profiel met deze naam bestaat al. Kies een andere naam.
 profileExistsTitle=Profiel bestaat al
 profileFinishText=Klik op Voltooien om het nieuwe profiel aan te maken.
-profileFinishTextMac=Klik op Klaar om het nieuwe profiel aan te maken.
+profileFinishTextMac=Klik op Gereed om het nieuwe profiel aan te maken.
 profileMissing=Uw %S-profiel kan niet worden geladen. Het is mogelijk niet aanwezig of ontoegankelijk.
 profileMissingTitle=Profiel ontbreekt
 
