--- a/nl/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/nl/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -135,7 +135,7 @@ downloadsTitlePercent=#2% van #1 bestand – Downloads;#2% van #1 bestanden – 
 
 fileExecutableSecurityWarning=“%S” is een uitvoerbaar bestand. Uitvoerbare bestanden kunnen virussen of andere code bevatten die uw computer kan beschadigen. Wees voorzichtig met het openen van dit bestand. Weet u zeker dat u “%S” wilt starten?
 fileExecutableSecurityWarningTitle=Uitvoerbaar bestand openen?
-fileExecutableSecurityWarningDontAsk=Mij niet opnieuw vragen
+fileExecutableSecurityWarningDontAsk=Mij niet meer vragen
 
 displayNameDesktop=Bureaublad
 
