--- a/nl/webapprt/webapprt/overrides/dom.properties
+++ b/nl/webapprt/webapprt/overrides/dom.properties
@@ -9,7 +9,7 @@ KillScriptLocation=Script: %S
 StopScriptButton=Script stoppen
 DebugScriptButton=Script debuggen
 WaitForScriptButton=Doorgaan
-DontAskAgain=&Mij niet opnieuw vragen
+DontAskAgain=&Mij niet meer vragen
 JSURLLoadBlockedWarning=Poging een javascript te laden: URL van een host\nin een venster dat inhoud van een andere host toont\nis geblokkeerd door de beveiligingsbeheerder.
 WindowCloseBlockedWarning=Scripts mogen vensters die niet door het script geopend zijn niet sluiten.
 OnBeforeUnloadTitle=Weet u het zeker?
@@ -83,7 +83,7 @@ FullScreenDeniedContentOnly=Verzoek voor volledig scherm is geweigerd, omdat het
 RemovedFullScreenElement=Volledig scherm verlaten, omdat volledigscherm-element is verwijderd van het document.
 FocusedWindowedPluginWhileFullScreen=Volledig scherm verlaten, omdat vensterplug-in in focus was.
 HTMLSyncXHRWarning=HTML-parsing in XMLHttpRequest wordt ondersteund in de synchrone modus.
-InvalidRedirectChannelWarning=Het is niet gelukt door te verwijzen naar %S, omdat het kanaal geen gebruik maakt van nsIWritablePropertyBag2.
+InvalidRedirectChannelWarning=Kan niet doorverwijzen naar %S, omdat het kanaal geen gebruik maakt van nsIWritablePropertyBag2.
 ResponseTypeSyncXHRWarning=Gebruik van XMLHttpRequest’s responseType-attribuut wordt niet meer ondersteund in de synchrone modus in venstercontext.
 WithCredentialsSyncXHRWarning=Gebruik van XMLHttpRequest’s withCredentials-attribuut wordt niet meer ondersteund in de synchrone modus in venstercontext.
 TimeoutSyncXHRWarning=Gebruik van XMLHttpRequest’s timeout-attribuut wordt niet ondersteund in de synchrone modus in venstercontext.
