Bug 1054177 - Changed instances of %S to ordered variables

--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -368,4 +368,4 @@ browser.menu.context.mailto = Poczta
 feedHandler.chooseFeed=Wybierz kanał
 feedHandler.subscribeWith=Subskrybuj poprzez
 
-nativeWindow.deprecated=API %S jest przestarzałe. Użyj: %S
+nativeWindow.deprecated=API %1$S jest przestarzałe. Użyj: %2$S
