[si] update from Pootle (firefox)

--- a/si/dom/chrome/layout/css.properties
+++ b/si/dom/chrome/layout/css.properties
@@ -135,6 +135,8 @@ PEFFVUnknownFontVariantPropValue='%1$S' හදුනාගත නාෙහැක
 PEFFVExpectedValue=ධන පූර්ණ සංඛ්‍යාව අගයක් බලපොරොතුව නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
 PEFFVTooManyValues='feature' වර්ගය එකට බලපොරුතු ඌවාට වඩා වැඩි අගයන් ගනනක් අැත '%1$S'.
 PEFFVGenericInFamilyList=වර්ගීකරන ලැයිස්තුව තුල එකම වර්ගය මුද්‍රණ අකුරු පවුල් නම් නොතිබිය යුතුය.
+PEFFVValueDefinitionTrailing=Expected end of value but found '%1$S'.
+PEBadDirValue='direction selector' තුල 'ltr' හෝ 'rtl' බලපොරොතුව් නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
 PESupportsConditionStartEOF2='නැත', '( ', හෝ ක්‍රියාව
 PESupportsConditionInParensEOF=')'
 PESupportsConditionNotEOF='නැත'
