[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/devtools/projecteditor.properties
+++ b/si/browser/chrome/browser/devtools/projecteditor.properties
@@ -45,6 +45,10 @@ projecteditor.deleteFilePromptMessage=ඔබට මෙම ගොනුව ඉව
 # the directory.
 projecteditor.newLabel=නව...
 
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=සුරකින්න
