--- a/si/browser/chrome/browser/devtools/timeline.properties
+++ b/si/browser/chrome/browser/devtools/timeline.properties
@@ -31,7 +31,7 @@ timeline.label=කාලරේඛාව
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=මෝස්තර
+# We want to use the same wording as Google Chrome
 
 # LOCALIZATION NOTE (graphs.memory):
 # This string is displayed in the memory graph of the Performance tool,
@@ -48,3 +48,4 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=අරඹන්න:
+timeline.markerDetail.stack=ගොඩ:
