--- a/si/browser/chrome/browser/preferences/preferences.properties
+++ b/si/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,13 @@ cannot=අවහිර කරන්න
 noCookieSelected=<කුකියක් තෝරා නැත>
 cookiesAll=පහත කුකී ඔබගේ පරිගණකයේ ගබඩාවි ඇත:
 cookiesFiltered=පහත කුකී ඔබගේ සෙවුමට ගැලපුණි:
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -137,9 +144,3 @@ syncUnlinkConfirm.label=Unlink
 featureEnableRequiresRestart=මෙම විශේෂාංගය සක්‍රීය කිරීමට %S යළි ඇරඹිය යුතුයි.
 featureDisableRequiresRestart=මෙම විශේෂාංගය අක්‍රිය කිරීමට %S යළි ඇරඹිය යුතුයි.
 shouldRestartTitle=%S යළි අරඹන්න
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=තහවුරු කිරීම යැවිනි
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=%S වෙත තහවුරු කිරීම් සබැඳියක් යැවිනි
-firefoxAccountVerificationSentDescription=සම්මුහුර්තකරණය ආරම්භ කිරීම සඳහා ඔබේ ඊ-තැපැල පිරික්සා සබැඳිය ක්ලික් කරන්න.
