--- a/si/browser/pdfviewer/viewer.properties
+++ b/si/browser/pdfviewer/viewer.properties
@@ -140,6 +140,8 @@ page_scale_width=පිටුවේ පළල
 page_scale_fit=පිටුවට සුදුසු ලෙස
 page_scale_auto=ස්වයංක්‍රීය විශාලණය
 page_scale_actual=නියමිත ප්‍රමාණය
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
 
 # Loading indicator messages
 loading_error_indicator=දෝෂය
