--- a/si/dom/chrome/layout/css.properties
+++ b/si/dom/chrome/layout/css.properties
@@ -141,3 +141,13 @@ PESupportsConditionStartEOF2='නැත', '( ', හෝ ක්‍රියාව
 PESupportsConditionInParensEOF=')'
 PESupportsConditionNotEOF='නැත'
 PESupportsWhitespaceRequired=හිස්තනකට පසු 'නැත', 'සහ', හෝ 'හෝ' බලපොරොතුවේ.
+PESupportsConditionExpectedOpenParenOrFunction=උපකාරක අවස්තාව විශ්ලේෂණය කරන තුරු '(' හෝ කිසියම් ක්‍රියාව බලපොරොතු ඌ නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
+PESupportsConditionExpectedCloseParen=උපකාරක අවස්තාව විශ්ලේෂණය කරන තුරු ')' බලපොරොතු ඌ නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
+PESupportsConditionExpectedStart2=උපකාරක අවස්තව විශ්ලේෂණය කරන තුරු 'නොවේ', '(' හෝ කිසියම් ක්‍රියාව බලපොරොතු ඌ නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
+PESupportsConditionExpectedNot=උපකාරක අවස්තව විශ්ලේෂණය කරන තුරු 'නොවේ' බලපොරොතු ඌ නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
+PEExpectedNoneOrURLOrFilterFunction='none', URL, හෝ 'filter' ක්‍රියාව බලපොරොතු ඌ නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
+PEExpectedNonnegativeNP=ධන පූර්ණ සංඛ්‍යාවක් හෝ ප්‍රතිශතයක් බලපොරොතු ඌ නමුත් සොයා ගැනීමට හැකිඌය '%1$S'.
+PEFilterFunctionArgumentsParsingError='filter' ක්‍රියවට බලපොරොතුවන අගයන්වල වැරදීමක් සිදුවී ඇත.
+PEValueWithVariablesParsingError=Error in parsing value for '%1$S' after substituting variables.
+PEValueWithVariablesFallbackInherit=නැවතත් 'inherit' තත්වයට පත්වෙමින් පවතී.
+PEValueWithVariablesFallbackInitial=නැවතත් 'initial' තත්වයට පත්වෙමින් පවතී.
