Bug 932179 - Part 2: UI to present security info in NetMonitor

--- a/pl/browser/chrome/browser/devtools/netmonitor.properties
+++ b/pl/browser/chrome/browser/devtools/netmonitor.properties
@@ -18,6 +18,14 @@ netmonitor.accesskey=S
 # displayed inside the developer tools window.
 netmonitor.tooltip=Monitor sieci
 
+netmonitor.security.state.secure=Połączenie użyte do pobrania tego zasobu było zabezpieczone.
+netmonitor.security.state.insecure=Połączenie użyte do pobrania tego zasobu nie było zaszyfrowane.
+netmonitor.security.state.broken=Błąd bezpieczeństwa uniemożliwił wczytanie tego zasobu.
+netmonitor.security.enabled=Włączone
+netmonitor.security.disabled=Wyłączone
+netmonitor.security.hostHeader=Nazwa hosta „%S”:
+netmonitor.security.notAvailable=<brak informacji>
+
 # LOCALIZATION NOTE (collapseDetailsPane): This is the tooltip for the button
 # that collapses the network details pane in the UI.
 collapseDetailsPane=Ukryj szczegóły żądania
