--- a/pl/browser/chrome/browser/devtools/profiler.properties
+++ b/pl/browser/chrome/browser/devtools/profiler.properties
@@ -17,6 +17,7 @@ recordingsList.saveLabel=Zapisz
 profile.tab=%1$S ms → %2$S ms
 
 graphs.fps=FPS
+graphs.ms=ms
 
 category.other=Gecko
 category.css=Style
