Bug 1118061-add "caller unavailable" messages to Hello

--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -111,6 +111,9 @@ peer_ended_conversation2=Rozmówca zakończył połączenie.
 conversation_has_ended=Rozmowa zakończona
 restart_call=Połącz ponownie
 
+contact_unavailable_title=Rozmówca „{{contactName}}” jest niedostępny.
+generic_contact_unavailable_title=Ta osoba jest niedostępna.
+
 cannot_start_call_session_not_ready=Nie można rozpocząć rozmowy, sesja nie jest gotowa.
 network_disconnected=Połączenie sieciowe niespodziewanie zakończone.
 connection_error_see_console_notification=Nieudane połączenie (szczegóły można znaleźć w konsoli).
