Updating after migration to beta for Firefox 36

--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -374,7 +374,7 @@ safebrowsing.notAnAttackButton.accessKey=н
 # LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Показати всі #1 вкладки;Показати всі #1 вкладок
+ctrlTab.listAllTabs.label=;Показати всі #1 вкладки;Показати всі #1 вкладок
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
