[cy] update from Pootle (firefox)

--- a/cy/browser/chrome/browser/browser.properties
+++ b/cy/browser/chrome/browser/browser.properties
@@ -371,10 +371,10 @@ safebrowsing.notAnAttackButton.label=Nid gwefan ymosodiad yw hwn…
 safebrowsing.notAnAttackButton.accessKey=y
 
 # Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
+# LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Dangos pob #1 tab
+ctrlTab.listAllTabs.label=;Rhestru Pob un o'r #1 Tab
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
