--- a/cy/browser/chrome/browser/devtools/projecteditor.properties
+++ b/cy/browser/chrome/browser/devtools/projecteditor.properties
@@ -46,6 +46,11 @@ projecteditor.deleteFilePromptMessage=Ydych chi'n siŵr eich bod eisiau dileu'r 
 # the directory.
 projecteditor.newLabel=Newydd…
 
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+projecteditor.renameLabel=Ailenwi
+
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=Cadw
