--- a/cy/browser/chrome/browser/devtools/timeline.properties
+++ b/cy/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,8 @@ timeline.records=COFNODION
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=Arddulliau
-timeline.label.reflow=Ail-lifo
+# We want to use the same wording as Google Chrome
 timeline.label.paint=Paent
-timeline.label.javascript=Javascript
 timeline.label.domevent=Digwyddiad DOM
 timeline.label.consoleTime=Consol
 
@@ -65,3 +63,4 @@ timeline.markerDetail.DOMEventPhase=Cyfnod:
 timeline.markerDetail.DOMEventTargetPhase=Targed
 timeline.markerDetail.DOMEventCapturingPhase=Cipio
 timeline.markerDetail.DOMEventBubblingPhase=Byrlymu
+timeline.markerDetail.stack=Stac:
