--- a/cy/browser/chrome/browser/devtools/webide.properties
+++ b/cy/browser/chrome/browser/devtools/webide.properties
@@ -65,7 +65,7 @@ addons_status_installing=gosod
 
 runtimedetails_checkno=na
 runtimedetails_checkyes=iawn
-runtimedetails_checkunkown=anhysbys
+runtimedetails_checkunknown=anhysbys (angen ADB Helper 0.4.0 neu ddiweddarach)
 runtimedetails_notUSBDevice=Nid yw'n ddyfais USB
 
 # Validation status
