--- a/cy/browser/chrome/browser/loop/loop.properties
+++ b/cy/browser/chrome/browser/loop/loop.properties
@@ -225,6 +225,12 @@ peer_ended_conversation2=Mae'r person roeddech yn eu galw wedi dod â'r sgwrs i 
 conversation_has_ended=Mae eich sgwrs wedi dod i ben.
 restart_call=Ailymuno
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+contact_unavailable_title=Nid yw {{contactName}} ar gael.
+generic_contact_unavailable_title=Mae'r person yma ar gael.
+
 generic_failure_title=Aeth rywbeth o'i le.
 generic_failure_with_reason2=Gallwch geisio eto neu e-bostio dolen er mwyn cysylltu'n hwyrach.
 generic_failure_no_reason2=Hoffech chi geisio eto?
@@ -270,7 +276,7 @@ feedback_category_audio_quality=Ansawdd y sain
 feedback_category_video_quality=Ansawdd y fideo
 feedback_category_was_disconnected=Wedi eich datgysylltu
 feedback_category_confusing=Dryslyd
-feedback_category_other=Arall:
+feedback_category_other2=Arall
 feedback_custom_category_text_placeholder=Beth aeth o'i le?
 feedback_submit_button=Cyflwyno
 feedback_back_button=Nôl
