--- a/cy/dom/chrome/security/security.properties
+++ b/cy/dom/chrome/security/security.properties
@@ -15,7 +15,9 @@ SHA1Sig=Mae'r wefan yn defnyddio Tystysgrif SHA-1; argymhellir eich bod yn defny
 InsecurePasswordsPresentOnPage=Mae'r meysydd cyfrinair yn cyflwyno tudalen anniogel (http://). Mae hyn yn berygl diogelwch sy'n caniatáu i fanylion mewngofnodi defnyddiwr gael ei ddwyn.
 InsecureFormActionPasswordsPresent=Mae'r meysydd cyfrinair yn cyflwyno gweithredu ffurflen (http://) anniogel. Mae hyn yn berygl diogelwch sy'n caniatáu i fanylion mewngofnodi defnyddiwr gael ei ddwyn.
 InsecurePasswordsPresentOnIframe=Mae'r meysydd cyfrinair yn cyflwyno iframe (http://) anniogel. Mae hyn yn berygl diogelwch sy'n caniatáu i fanylion mewngofnodi defnyddiwr gael ei ddwyn.
-LoadingMixedActiveContent=Llwytho cynnwys gweithredol (anniogel) cymysg ar dudalen diogel "%1$S"
-LoadingMixedDisplayContent=Llwytho cynnwys gweithredol (anniogel) cymysg dangos ar dudalen diogel "%1$S"
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Mae modd i iframe sydd ag allow-scripts ac allow-same-origin i'w briodweddau sandbox fedru tynnu ei sandbox.
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+# LOCALIZATION NOTE: Do not translate "RC4".
