--- a/cy/browser/chrome/browser/devtools/scratchpad.properties
+++ b/cy/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,8 +32,9 @@ openFile.title=Agor Ffeil
 # open fails.
 openFile.failed=Methu darllen y ffeil.
 
-# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
-# open fails.
+# LOCALIZATION NOTE  (importFromFile.convert.failed): This is the message
+# displayed when file conversion from some charset to Unicode fails.
+# %1 is the name of the charset from which the conversion failed.
 importFromFile.convert.failed=Methwyd â throsi'r ffeil i Unicode o %1$S.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
