Update strings for 37

--- a/zh-TW/browser/chrome/browser/devtools/projecteditor.properties
+++ b/zh-TW/browser/chrome/browser/devtools/projecteditor.properties
@@ -46,6 +46,11 @@ projecteditor.deleteFilePromptMessage=您確定要刪除此檔案嗎？
 # the directory.
 projecteditor.newLabel=新增…
 
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+projecteditor.renameLabel=重新命名
+
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=儲存
