--- a/zh-TW/browser/chrome/browser/devtools/scratchpad.properties
+++ b/zh-TW/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,8 +32,9 @@ openFile.title=開啟檔案
 # open fails.
 openFile.failed=檔案讀取失敗。
 
-# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
-# open fails.
+# LOCALIZATION NOTE  (importFromFile.convert.failed): This is the message
+# displayed when file conversion from some charset to Unicode fails.
+# %1 is the name of the charset from which the conversion failed.
 importFromFile.convert.failed=無法將檔案自 %1$S 轉換為 Unicode。
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
