--- a/zh-TW/browser/chrome/browser/devtools/timeline.properties
+++ b/zh-TW/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,11 @@ timeline.records=紀錄
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=樣式
-timeline.label.reflow=重排
+# We want to use the same wording as Google Chrome
+timeline.label.styles2=重新計算樣式
+timeline.label.reflow2=版面
 timeline.label.paint=繪圖
-timeline.label.javascript=Javascript
+timeline.label.javascript2=函數呼叫
 timeline.label.domevent=DOM 事件
 timeline.label.consoleTime=主控台
 
@@ -65,4 +66,8 @@ timeline.markerDetail.DOMEventPhase=階段:
 timeline.markerDetail.DOMEventTargetPhase=目標
 timeline.markerDetail.DOMEventCapturingPhase=捕捉
 timeline.markerDetail.DOMEventBubblingPhase=Bubbling
+timeline.markerDetail.stack=堆疊:
+timeline.markerDetail.startStack=開始時的堆疊:
+timeline.markerDetail.endStack=結束時的堆疊:
+timeline.markerDetail.unknownFrame=<未知位置>
 
