--- a/zh-TW/browser/chrome/browser/preferences/preferences.properties
+++ b/zh-TW/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,14 @@ cannot=阻擋
 noCookieSelected=<未選取 Cookie>
 cookiesAll=您的電腦中已儲存下列的 Cookie:
 cookiesFiltered=下列為符合您搜尋條件的 Cookie:
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=移除 #1 個選擇的項目
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -137,10 +145,4 @@ syncUnlinkConfirm.label=解除連結
 featureEnableRequiresRestart=必須重新啟動 %S 才能啟用此功能。
 featureDisableRequiresRestart=必須重新啟動 %S 才能停用此功能。
 shouldRestartTitle=重新啟動 %S
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=已寄出驗證信
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=驗證鏈結已寄送至 %S
-firefoxAccountVerificationSentDescription=請收信並點擊當中的驗證鏈結以開始同步。
 
