--- a/zh-TW/suite/chrome/common/notification.properties
+++ b/zh-TW/suite/chrome/common/notification.properties
@@ -16,6 +16,8 @@ carbonfailurepluginsMessage.button.label=重新啟動為 32 位元模式
 carbonfailurepluginsMessage.button.accesskey=R
 
 missingpluginsMessage.title=顯示此頁面全部的多媒體與資訊需要安裝其它的外掛程式。
+missingpluginsMessage.button.label=偏好設定
+missingpluginsMessage.button.accesskey=P
 
 blockedpluginsMessage.title=為了保護您的電腦，此頁面所需要的某些外掛程式已被封鎖。
 blockedpluginsMessage.infoButton.label=詳細資訊…
