--- a/zh-TW/browser/chrome/browser/browser.properties
+++ b/zh-TW/browser/chrome/browser/browser.properties
@@ -371,10 +371,10 @@ safebrowsing.notAnAttackButton.label=這不是有害網站…
 safebrowsing.notAnAttackButton.accessKey=A
 
 # Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
+# LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=顯示所有 #1 個分頁
+ctrlTab.listAllTabs.label=;列出全部 #1 個分頁
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
