--- a/zh-TW/suite/chrome/common/places/places.properties
+++ b/zh-TW/suite/chrome/common/places/places.properties
@@ -2,6 +2,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+delete.hostname.true=刪除 %S 的瀏覽記錄
+delete.hostname.false=刪除網站歷史記錄
+delete.hostname.accesskey=s
+delete.domain.true=刪除 *.%S 的瀏覽記錄
+delete.domain.false=刪除此網域的歷史紀錄
+delete.domain.accesskey=H
+
 load-js-data-url-error=為了安全上的考量，您無法從瀏覽記錄視窗或側邊欄載入 Javascript 或資料網址 (Data urls)。
 noTitle=(無標題)
 
