--- a/zh-TW/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/zh-TW/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -250,6 +250,9 @@ copyMessageStart=複製郵件到郵件匣 %S 中…
 copyMessageComplete=複製完成。
 copyMessageFailed=複製失敗。
 
+filterMessageComplete=過濾完成。
+filterMessageFailed=過濾失敗。
+
 ## LOCALIZATION NOTE (largeMessageSendWarning):
 ## %S is the message size in user-friendly notation. Do not translate.
 largeMessageSendWarning=警告！您將傳送一封大小為 %S 的訊息，可能超過郵件伺服器允許的限制。您確定要傳送嗎？
@@ -300,4 +303,6 @@ smtpEnterPasswordPromptTitle=SMTP 伺服器需要密碼
 ## LOCALIZATION NOTE(errorSavingMsg): Do not translate the word %S. It
 ## will be replaced with the name of the folder the message is being saved to.
 errorSavingMsg=將郵件儲存到 %S 時發生錯誤。要重試嗎?
+
+errorFilteringMsg=您的訊息已寄出並已儲存，但對其進行過濾分類時發生錯誤。
 
