--- a/sq/browser/chrome/browser/loop/loop.properties
+++ b/sq/browser/chrome/browser/loop/loop.properties
@@ -67,7 +67,7 @@ share_email_subject4={{clientShortname}} — Merrni pjesë në bisedë
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_email_body4=Tungjatjeta!\r\n\r\nEjani me mua për një bisedë video duke përdorur {{clientShortname}}:\r\n\r\nNuk ju duhet të shkarkoni apo instaloni gjë. Thjesht kopjojeni dhe hidheni këtë URL te shfletuesi juaj:\r\n\r\n{{callUrl}}\r\n\r\nNëse dëshironi, mund të mësoni më tepër rreth {{clientShortname}}, te {{learnMoreUrl}}\r\n\r\nMirë u dëgjofshim së shpejti!
 share_button=Email
-share_button2=Lidhje Email-i
+share_button2=Lidhje Me Email
 copy_url_button=Kopjoje
 copy_url_button2=Kopjoje Lidhjen
 copied_url_button=U kopjua!
@@ -301,7 +301,7 @@ rooms_list_copy_url_tooltip=Kopjoni Lidhjen
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
-rooms_list_current_conversations=Bisedë e tanishme;Biseda të tanishme
+rooms_list_current_conversations=Biseda e tanishme;Biseda të tanishme
 rooms_list_delete_tooltip=Fshijeni bisedën
 rooms_list_deleteConfirmation_label=Jeni i sigurt?
 rooms_list_no_current_conversations=Pa biseda hapur
