[cy] update from Pootle (firefox)

--- a/cy/browser/chrome/browser/accounts.properties
+++ b/cy/browser/chrome/browser/accounts.properties
@@ -42,4 +42,5 @@ verificationSentHeading = Mae dolen dilysu wedi'i anfon at %S
 verificationSentDescription = Gwiriwch eich e-bost a chlicio ar y ddolen i gychwyn cydweddu.
 
 verificationNotSentTitle = Methu Anfon y Dilysiad
+verificationNotSentHeading = Nid oes modd i ni anfon e-bost dilysu ar hyn o bryd
 verificationNotSentDescription = Ceisiwch eto'n hwyrach.
