--- a/cy/browser/chrome/browser/devtools/timeline.properties
+++ b/cy/browser/chrome/browser/devtools/timeline.properties
@@ -36,7 +36,10 @@ timeline.records=COFNODION
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 # We want to use the same wording as Google Chrome
+timeline.label.styles2=Ail-gyfrifo'r Arddull
+timeline.label.reflow2=Cynllun
 timeline.label.paint=Paent
+timeline.label.javascript2=Galwad Swyddogaeth
 timeline.label.domevent=Digwyddiad DOM
 timeline.label.consoleTime=Consol
 
@@ -64,3 +67,6 @@ timeline.markerDetail.DOMEventTargetPhase=Targed
 timeline.markerDetail.DOMEventCapturingPhase=Cipio
 timeline.markerDetail.DOMEventBubblingPhase=Byrlymu
 timeline.markerDetail.stack=Stac:
+timeline.markerDetail.startStack=Stacio ar y cychwyn:
+timeline.markerDetail.endStack=Stacio ar y diwedd:
+timeline.markerDetail.unknownFrame=<lleoliadau anhysbys>
