--- a/cy/dom/chrome/dom/dom.properties
+++ b/cy/dom/chrome/dom/dom.properties
@@ -162,3 +162,4 @@ XMLDocumentLoadPrincipalMismatch=Mae'r defnydd o document.load yn waharddedig ar
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Mae'r trosglwyddiad IndexedDB oedd heb ei gwblhau wedi ei atal oherwydd llywio tudalen.
 # LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeBudgetWarning=Mae'r defnydd o gof will-change yn rhy uchel. Mae'r arwynebedd yn cynnwys %1$S picsel, ac mae amcan arwynebedd y ddogfen wedi ei luosogi gyda %2$S (%3$S picsel). Bydd pob enghraifft o will-change sydd dros yr amcan yn cael ei anwybyddu.
