--- a/cy/dom/chrome/security/security.properties
+++ b/cy/dom/chrome/security/security.properties
@@ -16,8 +16,12 @@ InsecurePasswordsPresentOnPage=Mae'r meysydd cyfrinair yn cyflwyno tudalen annio
 InsecureFormActionPasswordsPresent=Mae'r meysydd cyfrinair yn cyflwyno gweithredu ffurflen (http://) anniogel. Mae hyn yn berygl diogelwch sy'n caniatáu i fanylion mewngofnodi defnyddiwr gael ei ddwyn.
 InsecurePasswordsPresentOnIframe=Mae'r meysydd cyfrinair yn cyflwyno iframe (http://) anniogel. Mae hyn yn berygl diogelwch sy'n caniatáu i fanylion mewngofnodi defnyddiwr gael ei ddwyn.
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedActiveContent2=Llwytho cynnwys gweithredol (anniogel) cymysg ar dudalen diogel "%1$S"
+LoadingMixedDisplayContent2=Llwytho cynnwys gweithredol (anniogel) cymysg dangos ar dudalen diogel "%1$S"
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Mae modd i iframe sydd ag allow-scripts ac allow-same-origin i'w briodweddau sandbox fedru tynnu ei sandbox.
 
 # LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=Mae'r wefan yn defnyddio protocol SSL 3.0 ar gyfer amgryptiad, sy'n anghymeradwy ac anniogel.
 # LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarning=Mae'r wefan yn defnyddio seiffr RC4 ar gyfer amgryptiad, sy'n anghymeradwy ac anniogel.
