[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/loop/loop.properties
+++ b/sv-SE/browser/chrome/browser/loop/loop.properties
@@ -225,6 +225,10 @@ peer_ended_conversation2=Personen du ringde har avslutat konversationen.
 conversation_has_ended=Din konversation har avslutats.
 restart_call=Gå åter in
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+
 generic_failure_title=Någonting gick fel.
 generic_failure_with_reason2=Du kan försöka igen eller e-posta en länk för att bli nådd senare.
 generic_failure_no_reason2=Vill du försöka igen?
@@ -270,7 +274,6 @@ feedback_category_audio_quality=Ljudkvalitet
 feedback_category_video_quality=Videokvalitet
 feedback_category_was_disconnected=Kopplades från
 feedback_category_confusing=Förvirrad
-feedback_category_other=Annat:
 feedback_custom_category_text_placeholder=Vad gick fel?
 feedback_submit_button=Skicka
 feedback_back_button=Bakåt
