--- a/sv-SE/browser/chrome/browser/devtools/projecteditor.properties
+++ b/sv-SE/browser/chrome/browser/devtools/projecteditor.properties
@@ -46,6 +46,10 @@ projecteditor.deleteFilePromptMessage=Är du säker på att du vill ta bort den 
 # the directory.
 projecteditor.newLabel=Ny…
 
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=Spara
