--- a/sv-SE/browser/chrome/browser/devtools/timeline.properties
+++ b/sv-SE/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,8 @@ timeline.records=POSTER
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=Stilar
-timeline.label.reflow=Återflöden
+# We want to use the same wording as Google Chrome
 timeline.label.paint=Måla
-timeline.label.javascript=Javascript
 timeline.label.domevent=DOM händelse
 timeline.label.consoleTime=Konsol
 
@@ -65,3 +63,4 @@ timeline.markerDetail.DOMEventPhase=Fas:
 timeline.markerDetail.DOMEventTargetPhase=Mål
 timeline.markerDetail.DOMEventCapturingPhase=Fånga
 timeline.markerDetail.DOMEventBubblingPhase=Bubbling
+timeline.markerDetail.stack=Stack:
