--- a/sv-SE/browser/chrome/browser/shellservice.properties
+++ b/sv-SE/browser/chrome/browser/shellservice.properties
@@ -17,7 +17,7 @@ setDefaultBrowserNotNow.accesskey  = I
 setDefaultBrowserNever.label       = Fråga mig inte igen
 setDefaultBrowserNever.accesskey   = F
 
-# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk, setDefaultBrowserAlertConfirm.label, setDefaultBrowserAlertNotNow.label):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
 setDefaultBrowserTitle=Standardwebbläsare
