--- a/sv-SE/dom/chrome/security/security.properties
+++ b/sv-SE/dom/chrome/security/security.properties
@@ -15,7 +15,13 @@ SHA1Sig=Denna webbplats använder sig av en SHA-1-certifikat; det rekommenderas 
 InsecurePasswordsPresentOnPage=Lösenordsfält på en osäker (http://) sida. Det här är en säkerhetsrisk som gör det möjligt att stjäla inloggningsuppgifter.
 InsecureFormActionPasswordsPresent=Lösenordsfält i ett formulär med en osäker (http://) formuläråtgärd. Det här är en säkerhetsrisk som gör det möjligt att stjäla inloggningsuppgifter.
 InsecurePasswordsPresentOnIframe=Lösenordsfält i en osäker (http://) iframe. Det här är en säkerhetsrisk som gör det möjligt att stjäla inloggningsuppgifter.
-LoadingMixedActiveContent=Öppnar blandat (osäkert) aktivt innehåll på en säker sida ”%1$S”
-LoadingMixedDisplayContent=Öppnar blandat (osäkert) visningsinnehåll på en säker sida ”%1$S”
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedActiveContent2=Laddar blandat (osäkert) aktivt innehåll "%1$S" på en säker sida
+LoadingMixedDisplayContent2=Laddar blandat (osäkert) visningsinnehåll "%1$S" på en säker sida
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=En iframe som har både allow-scripts och allow-same-origin för sitt sandbox-attribut kan ta bort sin sandboxning.
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=Denna webbplats använder protokollet SSL 3.0 för kryptering, som är föråldrat och osäkert.
+# LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarning=Denna webbplats använder chiffret RC4 för kryptering, vilket är föråldrat och osäkert.
