[cy] update from Pootle (firefox)

--- a/cy/dom/chrome/layout/css.properties
+++ b/cy/dom/chrome/layout/css.properties
@@ -106,7 +106,7 @@ PEColorSaturationEOF=dirlenwad
 PEColorLightnessEOF=ysgafnder
 PEColorOpacityEOF=didreiddedd mewn gwerth lliw
 PEExpectedNumber=Disgwyl rhif ond canfod '%1$S'.
-PEPositionEOF=<position>
+PEPositionEOF=<safle>
 PEExpectedPosition=Disgwyl <position> ond canfod '%1$S'.
 PEExpectedRadius=Disgwyl radiws ond canfod '%1$S'.
 PEExpectedCloseParen=Disgwyl ')' ond canfod '%1$S'.
